Listen over myndighetsadresser likte ikke null-verdier